# Neo_librus_opus

./: .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
app/: __init__.py
app/api/: __init__.py  api.py  auth.py  authors.py  books.py  jwt_utils.py  libraries.py  loans.py  permissions.py  reservations.py  roles.py  search.py  security.py  serializers.py  statuses.py  urls.py  users.py
app/core/: __init__.py  asgi.py  urls.py  wsgi.py
app/core/settings/: __init__.py  base.py  local.py  production.py  test.py
app/domain/: __init__.py  admin.py  apps.py  google_books.py  isbn.py  languages.py  models.py  repositories.py  repository.py  seed_utils.py  validators.py
app/domain/management/commands/: clear_books_data.py  fetch_isbn_books.py  run_cyclic_task.py  seed_polish_books.py  seed_polish_libraries.py  show_cyclic_task_reports.py
app/domain/migrations/: 0001_initial.py  0002_alter_book_isbn_alter_role_id.py  0002_create_groups.py  0003_alter_library_region_alter_libraryuser_region.py  0004_sessiontoken.py  0005_add_default_roles.py  0006_alter_sessiontoken_key.py  0007_fix_sessiontoken_fk_cascade.py  0008_alter_sessiontoken_key_max_length.py  0009_book_published_year.py  0010_alter_book_category_max_length.py  0011_cyclictaskreport.py  0012_alter_book_isbn.py  0013_alter_book_cover_url_and_integration_source.py  0014_book_enrichment_tracking.py  __init__.py
app/domain/seed_data/: polish_books_top100_real_isbns.json  polish_libraries_top10.json
app/tasks/: __init__.py  books.py  tests.py  worker.py
docs/: API_REFERENCE.md  DEPLOY.md  JWT_FRONTEND_GUIDE.md
scripts/: resolve_seed_isbns.py
tmp/: polish_books_isbn_candidates.json  polish_books_top100_resolved.json  polish_books_top100_seed_final.json  polish_books_top100_seed_final_utf8.json
